--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
   <head>
-      <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panda Facts</title>
     
     
   </head>
   <body>
+    <nav background-color:lightgreen;>
+    </nav>
     <div>
       <h1>Panda Facts: All About the Gentle Giants
       </h1>
