--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <nav background-color:lightgreen;>
+     WELCOME
     </nav>
     <div>
       <h1>Panda Facts: All About the Gentle Giants
