--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <nav style= "background-color:lightgreen;  height:50px; margin-right:0px; padding:25px;">
     <h2> PANDA FACTS: ALL ABOUT THOSE GENTLE GIANTS</h2>
     </nav>
-    <div>
+    <div style="background-image: url('panda.jpg'); /* Set your image URL */
+  background-size: cover; /* Ensures the image covers the div */
+  background-position: center; /* Centers the image in the div */
+  background-repeat: no-repeat; /* Prevents the image from repeating */
+  width: 100%; /* Set the width of the div */
+  height: 300px; /* Set the height of the div (or adjust as needed) */">
+    </div><br>
       <img src="panda.jpg" alt="cute baby Panda" width="300">
       <br>
       <p>Welcome to Panda Facts, your ultimate source for everything you need to know about one of the world's most beloved animals, the panda. Our website is dedicated to providing accurate, engaging, and comprehensive information about these gentle giants. Whether you're a curious student, a passionate wildlife enthusiast, or just someone who loves pandas, you'll find everything you need right here.</p>
